WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94427
WebPageProxy::setCursor does not check that the view is still in an active window
https://bugs.webkit.org/show_bug.cgi?id=94427
Summary
WebPageProxy::setCursor does not check that the view is still in an active wi...
mitz
Reported
2012-08-19 09:11:40 PDT
WebPageProxy::setCursor does not check that the view is still in an active window
Attachments
Patch
(1.76 KB, patch)
2012-08-19 09:14 PDT
,
mitz
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-08-19 09:14:16 PDT
Created
attachment 159298
[details]
Patch
mitz
Comment 2
2012-08-19 12:12:51 PDT
Fixed in <
http://trac.webkit.org/r125979
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug